fix on bootstrap

--- a/index.html
+++ b/index.html
@@ -30,87 +30,73 @@
           >Layout a griglia con diversi breakpoint (sm, md, lg)</span
         >
       </div>
-      <div class="row gx-0 gy-4">
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card white">
-            <h2>Colonna 1</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+      <div class="row gx-0 mb-3">
+        <div class="col-sm-12 col-md-6 col-lg-4 p-4 bg-white">
+          <h2>Colonna 1</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-8">
-          <div class="card gray">
-            <h2>Colonna 2</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+        <div class="col-12 col-md-6 col-lg-8 p-4 bg-secondary text-white">
+          <h2>Colonna 2</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="card blue">
-            <h2>Colonna 1</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+      </div>
+      <div class="row gx-0 mb-3">
+        <div class="col-6 col-md-4 p-4 bg-primary">
+          <h2>Colonna 1</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="card green">
-            <h2>Colonna 2</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+        <div class="col-6 col-md-4 p-4 bg-success">
+          <h2>Colonna 2</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-12 col-md-4">
-          <div class="card pink">
-            <h2>Colonna 3</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+        <div class="col-12 col-md-4 p-4 bg-danger">
+          <h2>Colonna 3</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="card azure">
-            <h2>Colonna 1</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+      </div>
+      <div class="row gx-0 mb-3">
+        <div class="col-6 col-md-3 p-4 bg-info">
+          <h2>Colonna 1</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="card yellow">
-            <h2>Colonna 2</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+        <div class="col-6 col-md-3 p-4 bg-warning">
+          <h2>Colonna 2</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="card black">
-            <h2>Colonna 3</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+        <div class="col-6 col-md-3 p-4 bg-dark text-white">
+          <h2>Colonna 3</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="card white">
-            <h2>Colonna 4</h2>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              soluta veniam ex aliquam tempore facilis?</span
-            >
-          </div>
+        <div class="col-6 col-md-3 p-4 bg-white">
+          <h2>Colonna 4</h2>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Non soluta
+            veniam ex aliquam tempore facilis?</span
+          >
         </div>
       </div>
     </div>
